; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_memorystatus_vm_map_fork.c_test_child_process.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_memorystatus_vm_map_fork.c_test_child_process.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rusage = type { i32 }

@.str = private unnamed_addr constant [24 x i8] c"  continuing child[%d]\0A\00", align 1
@SIGCONT = common dso_local global i32 0, align 4
@T_QUIET = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [27 x i8] c"  kill(%d, SIGCONT) failed\00", align 1
@.str.2 = private unnamed_addr constant [32 x i8] c"  waiting for child[%d] to exit\00", align 1
@.str.3 = private unnamed_addr constant [29 x i8] c"  wait4(%d, ...) returned %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, %struct.rusage*)* @test_child_process to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_child_process(i32 %0, i32* %1, %struct.rusage* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.rusage*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store %struct.rusage* %2, %struct.rusage** %6, align 8
  store i32 0, i32* %7, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @T_LOG(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @SIGCONT, align 4
  %13 = call i32 @kill(i32 %11, i32 %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* @T_QUIET, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @T_ASSERT_POSIX_SUCCESS(i32 %15, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %16)
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @T_LOG(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.2, i64 0, i64 0), i32 %18)
  %20 = load i32, i32* %4, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = load %struct.rusage*, %struct.rusage** %6, align 8
  %23 = call i32 @wait4(i32 %20, i32* %21, i32 0, %struct.rusage* %22)
  store i32 %23, i32* %8, align 4
  %24 = load i32, i32* @T_QUIET, align 4
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* %4, align 4
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @T_ASSERT_EQ(i32 %25, i32 %26, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.3, i64 0, i64 0), i32 %27, i32 %28)
  ret void
}

declare dso_local i32 @T_LOG(i8*, i32) #1

declare dso_local i32 @kill(i32, i32) #1

declare dso_local i32 @T_ASSERT_POSIX_SUCCESS(i32, i8*, i32) #1

declare dso_local i32 @wait4(i32, i32*, i32, %struct.rusage*) #1

declare dso_local i32 @T_ASSERT_EQ(i32, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
